# crime-reports

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main_web-analysis.yml
app/: layout.tsx  page.tsx
app/static/: cache.json
backend/: app.py  flask_app.py
components/: ContactForm.tsx  CrimeChart.tsx  CrimeGraph.tsx  DataTable.tsx  Filter.tsx  Footer.tsx  Header.tsx  Search.tsx
public/: NCVS_2020.csv
server/: Dockerfile  main.py  pyproject.toml  requirements.txt
