[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-middleware>=0.2.1",
    "fastapi-responses>=0.2.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.3",
]
